# boil.rs

./: Cargo.toml
example/: project.toml
example/template/: LICENSE
example_template/: project.toml
src/: app.rs  config.rs  constants.rs  errors.rs  main.rs  output.rs  parser.rs
src/generate/: config.rs  mod.rs  output.rs  parser.rs  scanner.rs
src/generate/plugins/: case_mod.rs
src/install/: mod.rs
src/list/: mod.rs
src/new/: mod.rs
src/plugins/: case_mod.rs  mod.rs
src/uninstall/: mod.rs
src/utils/: config.rs  mod.rs
