[package]
name = "boilrs"
version = "0.1.0"
authors = ["Johan Planchon <johan.planchon@simplx.fr>"]
edition = "2018"
description = "Small util to generate projets from templates"

[features]
case_mod = ["convert_case"]

[dependencies]
# Parsing files
nom = "5.1"
walkdir = "2.3"
# Config files
serde = "1.0"
toml = "0.5"
# Command line utility
clap = "2.33"
dialoguer = "0.6"
console = "0.12"
indicatif = "0.15"
human-panic = "1.0"
error-chain = "0.12"
# Plugins
convert_case = { version = "0.4", optional = true }
