[package]
name = "boilrs"
version = "0.1.0"
authors = ["Johan Planchon <johan.planchon@simplx.fr>"]
edition = "2018"
description = "Small util to generate projets from templates"

[features]
case_mod = ["convert_case"]
all_plugins = ["case_mod"]

[dependencies]
# Parsing files
tera = { version = "1.5", default-features = false }
walkdir = "2.3"
glob = "0.3"
# Config files
toml = "0.5"
# kv = "0.22" # To store downloaded templates
# zip = "0.5" # To decompress downloaded templates
# git2 = { version = "0.13", optional = true } # To download from any git repo (feature git)
# reqwest = { version = "0.10", optional = true } # To download from github easily (default feature)
# Command line utility
clap = "2.33"
dialoguer = "0.6"
console = "0.12"
indicatif = "0.15"
human-panic = "1.0"
error-chain = "0.12"
# Plugins
convert_case = { version = "0.4", optional = true }
